crates/sakka-test/tests/trybuild/struct_context_dupe.rs
use sakka::{Decode, Encode};

#[derive(Encode, Decode)]
#[sakka(context = crate::C1, context = crate::C2)]
struct StructContextDupe {
    value: u8,
}

fn main() {}
